--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
 
 @layer base {
   button {
-    @apply bg-transparent hover:bg-blue-500 text-blue-700 font-semibold hover:text-white py-1 px-2 border border-blue-500 hover:border-transparent rounded;
+    @apply bg-transparent hover:bg-blue-500 text-slate-400 font-semibold hover:text-white py-1 px-2 border border-blue-500 hover:border-transparent rounded;
   }
 }
 
